:bug: Fix long file names (#6216)
* :wrench: Add truncate str macro

* :bug: Use truncate instead of prune to prevent title override

* :lipstick: Use text-overflow ellipsis on file names

* :paperclip: Add #10662 to 2.7 bugfixes

--- a/frontend/src/app/main/ui/workspace/left_header.scss
+++ b/frontend/src/app/main/ui/workspace/left_header.scss
@@ -54,6 +54,10 @@
   flex-direction: row;
 }
 
+.file-name-label {
+  @include textEllipsis;
+}
+
 .file-name-input {
   @include flexCenter;
   width: 100%;
